# word-base

./: .env.example  .gitignore  AGENTS.md  APP_STORE_READINESS.md  ARCHITECTURE.md  PRODUCTION_READINESS.md  README.md  SUPABASE_SETUP.md  SYNC_TESTING_GUIDE.md  debug-sync-book-switch.md  index.html  metadata.json  package-lock.json  package.json  server-new.js  server.js  server.js.old  supabase-server.js  tsconfig.json  turbo.json  vercel.json  vite.config.ts
.data/: pairings.json  tokens.json  users.json  wordbase.db  wordbase.db-shm  wordbase.db-wal  words.json
.github/workflows/: ci.yml  deploy.yml  desktop-release.yml  mobile-ota.yml  rollback.yml  screenshot.yml  verify.yml
.turbo/cache/: 1b169037a40a213d-manifest.json  1b169037a40a213d-meta.json  1b169037a40a213d.tar.zst  212a965a2e7a4491-manifest.json  212a965a2e7a4491-meta.json  212a965a2e7a4491.tar.zst  38a0c7f17e7f7436-manifest.json  38a0c7f17e7f7436-meta.json  38a0c7f17e7f7436.tar.zst  41948104e45cbf18-manifest.json  41948104e45cbf18-meta.json  5a8c0bd8069ddd45-manifest.json  (+28 more)
api/: [...all].js  [[...all]].ts
apps/desktop/native-templates/: Cargo.toml  Cargo.toml.patch  README.md  lib.rs  tauri.conf.json
db/: auth.js  books.js  index.js  sqlite.js  users.js  words.js
docs/: CROSS_PLATFORM_UI.md  DEPLOYMENT.md  TECH_STACK.md  TESTING_GUIDE.md
scripts/: generate-icons.mjs  set-version.cjs
shared/: AppSupabase.tsx  avatars.ts  env.d.ts  index.css  index.ts  package.json  platform.ts  types.ts  vite-chunks.ts  vite-env.d.ts
src/: App.tsx  AppSupabase.tsx  index.css  main.tsx  mockData.ts  types.ts
(+268 files in other folders)
